--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.17.0",
     "mongoose": "^6.5.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
