--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-server": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "cors": "^2.8.5",
+    "dataloader": "^2.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.9.2",
