--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "build-babel": "babel -d ./build ./src -s",
     "clean": "rm -rf build && mkdir build",
-    "build": "npm run clean && npm run build-babel"
+    "build": "npm run clean && npm run build-babel",
+    "test": "mocha --require @babel/register 'src/**/*.spec.js'"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +18,12 @@
     "@babel/core": "^7.20.2",
     "@babel/node": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.21.0",
+    "axios": "^1.3.4",
+    "chai": "^4.3.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
