--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -11,10 +11,8 @@ services:
     volumes:
       - workout-app-local-mongodb-data:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-    # networks:
-    #   - backend
+      MONGO_DB_USERNAME: ${MONGO_DB_USERNAME}
+      MONGO_DB_PASSWORD: ${MONGO_DB_PASSWORD}
 
   mongo-express:
     image: mongo-express
@@ -23,16 +21,11 @@ services:
     ports:
       - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${ME_CONFIG_MONGODB_ADMINUSERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${ME_CONFIG_MONGODB_ADMINPASSWORD}
-      ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
-    # networks:
-    #   - backend
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_DB_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_DB_PASSWORD}
+      ME_CONFIG_MONGODB_SERVER: ${MONGO_DB_HOST}
+      ME_CONFIG_MONGODB_URL: ${MONGO_DB_PROTOCOL_SCHEME}://${ME_CONFIG_MONGODB_ADMINUSERNAME}:${ME_CONFIG_MONGODB_ADMINPASSWORD}@${ME_CONFIG_MONGODB_SERVER}/
 
 volumes:
   workout-app-local-mongodb-data:
     name: "workout-app-local-mongodb-volume"
-
-# networks:
-#   backend:
-#     name: workoutapp-backend-network
